# biclustering

./: .gitignore  CMakeLists.txt  README.md  REPORT.txt
1D-2D/: greedy_spanning_tree.py  linear_biclustering.py  script.py  tsp_2D.py
1D-2D/biology/large/: brown_selected_large.txt  brown_selected_large_scores.txt
1D-2D/biology/small/: brown_selected_small.txt  brown_selected_small_scores.txt
1D-2D/image/large/: caribbean_matrix_large.txt  caribbean_matrix_large_scores.txt  flower_matrix_large.txt  flower_matrix_large_scores.txt
1D-2D/image/small/: caribbean_matrix_small.txt  caribbean_matrix_small_scores.txt  flower_matrix_small.txt  flower_matrix_small_scores.txt
1D-2D/random-binary/large/: random_binary_matrix_large_1.txt  random_binary_matrix_large_1_scores.txt  random_binary_matrix_large_2.txt  random_binary_matrix_large_2_scores.txt
1D-2D/random-binary/small/: random_binary_matrix_small_1.txt  random_binary_matrix_small_1_scores.txt  random_binary_matrix_small_2.txt  random_binary_matrix_small_2_scores.txt
1D-2D/random/large/: random_matrix_large_1.txt  (+3 more)
correlation/: approximation  approximation.cpp  coefficients.py  distance  distance.cpp  image_to_matrix.py  script.py  tsp.py
correlation/image/: results.txt  statistics.txt
correlation/random/: results.txt  statistics.txt
correlation/random-binary/: results.txt  statistics.txt
correlation/random-positive/: results.txt  statistics.txt
expected-minimum-path/: distribution_analysis.nb  distribution_data.txt  distribution_variance22.py
include/: cost_functions.h  fixed_rows.h  matrix.h
linear-programming/: linear_biclustering.py  optimal_brute.cpp  quadratic_biclustering.py
linear-programming/approximation/: linear_biclustering_approximation.py  linear_biclustering_approximation_relaxation.py
src/: cost_functions.cpp  fixed_rows.cpp  main.cpp  matrix.cpp
test-data/: test1.in  test2.in
(+18 files in other folders)
